--- a/app/pages/trade-sub/trade-sub.html
+++ b/app/pages/trade-sub/trade-sub.html
@@ -15,6 +15,6 @@
 
 <ion-content no-padding>
   <ion-list>
-    <button ion-item *ngFor="let sub of subs" (click)="nav2TradeDetailPage(sub)">{{sub}}</button>
+    <button ion-item *ngFor="let sub of subs" (click)="nav2TradeDetailPage(sub)">{{sub.name}}</button>
   </ion-list>
 </ion-content>
