--- a/www/fontcustom/output/icons-preview.html
+++ b/www/fontcustom/output/icons-preview.html
@@ -141,11 +141,11 @@
 
       @font-face {
   font-family: "icons";
-  src: url("./icons_7a128982fe13f462c09b48e390450839.eot");
-  src: url("./icons_7a128982fe13f462c09b48e390450839.eot?#iefix") format("embedded-opentype"),
-       url("./icons_7a128982fe13f462c09b48e390450839.woff") format("woff"),
-       url("./icons_7a128982fe13f462c09b48e390450839.ttf") format("truetype"),
-       url("./icons_7a128982fe13f462c09b48e390450839.svg#icons") format("svg");
+  src: url("./icons_e9ea7ea4bd85fbeb197c6128066409e3.eot");
+  src: url("./icons_e9ea7ea4bd85fbeb197c6128066409e3.eot?#iefix") format("embedded-opentype"),
+       url("./icons_e9ea7ea4bd85fbeb197c6128066409e3.woff") format("woff"),
+       url("./icons_e9ea7ea4bd85fbeb197c6128066409e3.ttf") format("truetype"),
+       url("./icons_e9ea7ea4bd85fbeb197c6128066409e3.svg#icons") format("svg");
   font-weight: normal;
   font-style: normal;
 }
@@ -153,7 +153,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: "icons";
-    src: url("./icons_7a128982fe13f462c09b48e390450839.svg#icons") format("svg");
+    src: url("./icons_e9ea7ea4bd85fbeb197c6128066409e3.svg#icons") format("svg");
   }
 }
 
@@ -185,6 +185,7 @@
 .ion-ios-screen-size:before,
 .ion-ios-sdk:before,
 .ion-ios-select:before,
+.ion-ios-star:before,
 .ion-ios-temperature:before,
 .ion-ios-today:before,
 .ion-ios-user:before,
@@ -230,6 +231,7 @@
 .ion-ios-screen-size:before { content: "\f113"; }
 .ion-ios-sdk:before { content: "\f114"; }
 .ion-ios-select:before { content: "\f115"; }
+.ion-ios-star:before { content: "\f11f"; }
 .ion-ios-temperature:before { content: "\f116"; }
 .ion-ios-today:before { content: "\f11e"; }
 .ion-ios-user:before { content: "\f117"; }
@@ -251,7 +253,7 @@
   <body class="characters-off">
     <div id="page" class="container">
       <header>
-        <h1>icons contains 31 glyphs:</h1>
+        <h1>icons contains 32 glyphs:</h1>
         <a onclick="toggleCharacters(); return false;" href="#">Toggle Preview Characters</a>
       </header>
 
@@ -578,6 +580,19 @@
         <div class="usage">
           <input class="class" type="text" readonly="readonly" onClick="this.select();" value=".ion-ios-select" />
           <input class="point" type="text" readonly="readonly" onClick="this.select();" value="&amp;#xf115;" />
+        </div>
+      </div>
+      
+      <div class="glyph">
+        <div class="preview-glyphs">
+          <span class="step size-12"><span class="letters">Pp</span><i id="ion-ios-star" class="ion-ios-star"></i></span><span class="step size-14"><span class="letters">Pp</span><i id="ion-ios-star" class="ion-ios-star"></i></span><span class="step size-16"><span class="letters">Pp</span><i id="ion-ios-star" class="ion-ios-star"></i></span><span class="step size-18"><span class="letters">Pp</span><i id="ion-ios-star" class="ion-ios-star"></i></span><span class="step size-21"><span class="letters">Pp</span><i id="ion-ios-star" class="ion-ios-star"></i></span><span class="step size-24"><span class="letters">Pp</span><i id="ion-ios-star" class="ion-ios-star"></i></span><span class="step size-36"><span class="letters">Pp</span><i id="ion-ios-star" class="ion-ios-star"></i></span><span class="step size-48"><span class="letters">Pp</span><i id="ion-ios-star" class="ion-ios-star"></i></span><span class="step size-60"><span class="letters">Pp</span><i id="ion-ios-star" class="ion-ios-star"></i></span><span class="step size-72"><span class="letters">Pp</span><i id="ion-ios-star" class="ion-ios-star"></i></span>
+        </div>
+        <div class="preview-scale">
+          <span class="step">12</span><span class="step">14</span><span class="step">16</span><span class="step">18</span><span class="step">21</span><span class="step">24</span><span class="step">36</span><span class="step">48</span><span class="step">60</span><span class="step">72</span>
+        </div>
+        <div class="usage">
+          <input class="class" type="text" readonly="readonly" onClick="this.select();" value=".ion-ios-star" />
+          <input class="point" type="text" readonly="readonly" onClick="this.select();" value="&amp;#xf11f;" />
         </div>
       </div>
       
