--- a/app/pages/order/order.html
+++ b/app/pages/order/order.html
@@ -20,7 +20,7 @@
 </ion-header>
 
 
-<ion-content no-padding>
+<ion-content no-padding class="order">
   <ion-list>
     <ion-item>
       <ion-label primary stacked>产品型号</ion-label>
@@ -39,15 +39,15 @@
       <ion-input type="number" value="1" placeholder=""></ion-input>
     </ion-item>
     <ion-item>
-      <ion-label primary stacked>收货人</ion-label>
+      <ion-label primary stacked>收货人 <ion-icon name="star"></ion-icon></ion-label>
       <ion-input type="email" placeholder=""></ion-input>
     </ion-item>
     <ion-item>
-      <ion-label primary stacked>收货人电话</ion-label>
+      <ion-label primary stacked>收货人电话 <ion-icon name="star"></ion-icon></ion-label>
       <ion-input type="number" placeholder=""></ion-input>
     </ion-item>
     <ion-item>
-      <ion-label primary stacked>收货地址</ion-label>
+      <ion-label primary stacked>收货地址 <ion-icon name="star"></ion-icon></ion-label>
       <ion-textarea rows="4" placeholder=""></ion-textarea>
     </ion-item>
     <ion-item>
