--- a/app/pages/enquiry/enquiry.html
+++ b/app/pages/enquiry/enquiry.html
@@ -20,7 +20,7 @@
   <ion-list>
     <ion-item>
       <ion-label primary stacked>功能描述</ion-label>
-      <ion-textarea rows="4" [(ngModel)]="enquiry.function" placeholder="请您将功能描述清楚，以便于销售人员为您报价!"></ion-textarea>
+      <ion-textarea rows="4" [(ngModel)]="enquiry.func" placeholder="请您将功能描述清楚，以便于销售人员为您报价!"></ion-textarea>
     </ion-item>
     <ion-item>
       <ion-label primary stacked>项目名称 <ion-icon name="star"></ion-icon></ion-label>
