--- a/app/pages/order-detail/order-detail.html
+++ b/app/pages/order-detail/order-detail.html
@@ -8,39 +8,48 @@
 
   <ion-navbar>
     <ion-title>订单详细</ion-title>
-    <ion-buttons end>
-      <button block>取消订单</button>
-    </ion-buttons>
+    <!--<ion-buttons end>-->
+    <!--<button block>取消订单</button>-->
+    <!--</ion-buttons>-->
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content no-padding class="order-detail">
-  <ion-list>
-    <ion-item>
-      <h2>订单号:212112121212121</h2>
-      <ion-note item-right>完成</ion-note>
-    </ion-item>
-    <button ion-item (click)="nav2OrderStatus()">
-      <ion-icon name=""></ion-icon>订单状态跟踪
-    </button>
-  </ion-list>
-  <ion-list>
-    <ion-item>
-      <h2>
-        <ion-icon name=""></ion-icon>李先生&nbsp;&nbsp;&nbsp;&nbsp;136****0942
-      </h2>
-      <p>北京市海淀区上地西路43号</p>
-    </ion-item>
-  </ion-list>
-  <ion-list>
-    <ion-item (click)="nav2PrototypeDetail()">
-      <ion-thumbnail item-left>
-        <img src="img/products/kt40.jpg">
-      </ion-thumbnail>
-      <h2>KT40Q手持终端反对撒发的顺丰撒放大舒服的</h2>
-      <p>共1件&nbsp;&nbsp;&nbsp;&nbsp;共计888元</p>
-    </ion-item>
+  <div *ngIf="order">
+    <ion-list>
+      <ion-list-header>
+        订单状态
+      </ion-list-header>
+      <button ion-item (click)="nav2OrderStatus()">
+        <ion-icon name=""></ion-icon>
+        {{order.state}}
+        <ion-note item-right>追踪</ion-note>
+      </button>
     </ion-list>
+    <ion-list>
+      <ion-list-header>
+        收货人信息
+      </ion-list-header>
+      <ion-item>
+        <h2>
+          {{order.receiver}} {{order.receiverPhone}}
+        </h2>
+        <p>{{order.address}}</p>
+      </ion-item>
+    </ion-list>
+    <ion-list>
+      <ion-list-header>
+        产品信息
+      </ion-list-header>
+      <ion-item (click)="nav2ProductDetail()">
+        <ion-thumbnail item-left>
+          <img src="{{order.product.picUrl}}">
+        </ion-thumbnail>
+        <h2>{{order.product.name}}</h2>
+        <p>共{{order.quantity}}件</p>
+      </ion-item>
+    </ion-list>
+  </div>
 </ion-content>
