--- a/app/pages/oem-detail/oem-detail.html
+++ b/app/pages/oem-detail/oem-detail.html
@@ -18,9 +18,12 @@
       </button>
     </ion-col>
     <ion-col width-80 no-padding>
-      <button full no-margin favorite>
-        <ion-icon name="call-outline"></ion-icon>400-8888-8888
-      </button>
+      <a href="tel:010-52866530">
+        <button full no-margin favorite>
+          <ion-icon name="call-outline"></ion-icon>
+          010-52866530
+        </button>
+      </a>
     </ion-col>
   </ion-row>
 </ion-footer>
