--- a/app/pages/sdk/sdk.html
+++ b/app/pages/sdk/sdk.html
@@ -41,10 +41,12 @@
     </button>
   </div>
   <div padding style="padding-top: 0">
+    <a href="tel:010-52866530">
     <button block favorite no-margin>
       <ion-icon name="call-outline"></ion-icon>
-      400-8888-8888
+      010-52866530
     </button>
+      </a>
   </div>
 
 </ion-content>
