--- a/app/pages/product-list/product-list.html
+++ b/app/pages/product-list/product-list.html
@@ -4,14 +4,6 @@
   See http://ionicframework.com/docs/v2/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-header>
-
-  <ion-navbar>
-    <ion-title>产品列表</ion-title>
-  </ion-navbar>
-
-</ion-header>
-
 
 <ion-content no-padding>
 
@@ -23,4 +15,7 @@
       <h2>{{p.name}}</h2>
     </button>
   </ion-list>
+  <button fab fab-bottom fab-fixed fab-left background (click)="back()">
+    <ion-icon name="undo"></ion-icon>
+  </button>
 </ion-content>
