--- a/app/pages/company/company.html
+++ b/app/pages/company/company.html
@@ -4,18 +4,11 @@
   See http://ionicframework.com/docs/v2/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-header>
-
-  <ion-navbar>
-    <ion-title>公司风采</ion-title>
-  </ion-navbar>
-
-</ion-header>
-
-
 <ion-content no-padding>
   <ion-list>
     <button ion-item *ngFor="let c of contents" (click)="nav2CompanyDetailPage(c)">{{c.name}}</button>
   </ion-list>
-
+  <button fab fab-bottom fab-fixed fab-left background (click)="back()">
+    <ion-icon name="undo"></ion-icon>
+  </button>
 </ion-content>
