--- a/app/pages/custom-info/custom-info.html
+++ b/app/pages/custom-info/custom-info.html
@@ -4,20 +4,6 @@
   See http://ionicframework.com/docs/v2/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-header>
-
-  <ion-toolbar>
-    <ion-buttons start>
-      <button block (click)="dismiss()">取消</button>
-    </ion-buttons>
-    <ion-title>公司信息</ion-title>
-    <ion-buttons end>
-      <button block (click)="save()">保存</button>
-    </ion-buttons>
-  </ion-toolbar>
-
-</ion-header>
-
 
 <ion-content no-padding class="custom-info">
   <ion-list>
@@ -51,3 +37,17 @@
     </ion-item>
   </ion-list>
 </ion-content>
+
+<ion-footer>
+  <ion-toolbar>
+    <ion-buttons start>
+      <button royal (click)="dismiss()">取消
+      </button>
+    </ion-buttons>
+    <ion-title></ion-title>
+    <ion-buttons end>
+      <button royal favorite (click)="save()">保存
+      </button>
+    </ion-buttons>
+  </ion-toolbar>
+</ion-footer>
