--- a/app/pages/home/home.html
+++ b/app/pages/home/home.html
@@ -1,9 +1,9 @@
-<ion-header>
-  <ion-toolbar text-center>
-    <img src="img/logo.png" width="30px" height="30px" style="position: relative; top: 3px;"/>
-    <span class="titleicon">&nbsp;思必拓股份</span>
-  </ion-toolbar>
-</ion-header>
+<!--<ion-header>-->
+  <!--<ion-toolbar text-center>-->
+    <!--<img src="img/logo.png" width="30px" height="30px" style="position: relative; top: 3px;"/>-->
+    <!--<span class="titleicon">&nbsp;思必拓股份</span>-->
+  <!--</ion-toolbar>-->
+<!--</ion-header>-->
 
 <ion-content no-padding class="home">
   <ion-slides pager style="height:auto;">
@@ -11,43 +11,43 @@
       <img src="{{u}}"/>
     </ion-slide>
   </ion-slides>
-  <div style="height:16px;">&nbsp;</div>
+
   <ion-grid no-padding>
-    <ion-row>
+    <ion-row style="border-bottom:solid 1px #e3e3e3">
       <ion-col width-33>
-        <button clear block class="text-on-bottom" (click)="nav2SelectPage()">
-          <ion-icon name="select"></ion-icon>
-          三分钟选型
+        <button background clear block class="text-on-bottom" (click)="nav2CompanyPage()">
+          <ion-icon name="company"></ion-icon>
+          公司风采
         </button>
       </ion-col>
-      <ion-col width-33>
-        <button clear block class="text-on-bottom" (click)="nav2TradeCategoryPage()">
+      <ion-col width-33 style="border-left: solid 1px #e3e3e3;border-right:solid 1px #e3e3e3">
+        <button background clear block class="text-on-bottom" (click)="nav2TradeCategoryPage()">
           <ion-icon name="medal"></ion-icon>
           行业应用
         </button>
       </ion-col>
       <ion-col width-33>
-        <button clear block class="text-on-bottom" (click)="nav2OemPge()">
+        <button background clear block class="text-on-bottom" (click)="nav2OemPge()">
           <ion-icon name="oem"></ion-icon>
           OEM/ODM
         </button>
       </ion-col>
     </ion-row>
-    <ion-row>
+    <ion-row style="border-bottom:solid 1px #e3e3e3">
       <ion-col width-33>
-        <button clear block class="text-on-bottom" (click)="nav2SdkPage()">
+        <button background clear block class="text-on-bottom" (click)="nav2SdkPage()">
           <ion-icon name="sdk"></ion-icon>
           SDK下载
         </button>
       </ion-col>
-      <ion-col width-33>
-        <button clear block class="text-on-bottom" (click)="nav2CompanyPage()">
-          <ion-icon name="company"></ion-icon>
-          公司风采
+      <ion-col width-33 style="border-left: solid 1px #e3e3e3;border-right:solid 1px #e3e3e3">
+        <button background clear block class="text-on-bottom" (click)="nav2SelectPage()">
+          <ion-icon name="select"></ion-icon>
+          三分钟选型
         </button>
       </ion-col>
       <ion-col width-33>
-      </ion-col>
+        </ion-col>
     </ion-row>
   </ion-grid>
 </ion-content>
