--- a/app/pages/oem/oem.html
+++ b/app/pages/oem/oem.html
@@ -4,16 +4,10 @@
   See http://ionicframework.com/docs/v2/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-header>
-
-  <ion-navbar>
-    <ion-title>OEM/ODM</ion-title>
-  </ion-navbar>
-
-</ion-header>
-
-
 <ion-content padding>
-
   <button outline block *ngFor="let oem of oems" (click)="nav2OemDetailPage(oem.id)">{{oem.name}}</button>
+  <button fab fab-bottom fab-fixed fab-left background (click)="back()">
+    <ion-icon name="undo"></ion-icon>
+  </button>
 </ion-content>
+
