--- a/app/pages/order-detail/order-detail.html
+++ b/app/pages/order-detail/order-detail.html
@@ -4,17 +4,6 @@
   See http://ionicframework.com/docs/v2/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-header>
-
-  <ion-navbar>
-    <ion-title>订单详细</ion-title>
-    <!--<ion-buttons end>-->
-    <!--<button block>取消订单</button>-->
-    <!--</ion-buttons>-->
-  </ion-navbar>
-
-</ion-header>
-
 
 <ion-content no-padding class="order-detail">
   <div *ngIf="order">
@@ -52,4 +41,7 @@
       </ion-item>
     </ion-list>
   </div>
+  <button fab fab-bottom fab-fixed fab-left background (click)="navCtrl.pop()">
+    <ion-icon name="undo"></ion-icon>
+  </button>
 </ion-content>
