--- a/app/pages/order-list/order-list.html
+++ b/app/pages/order-list/order-list.html
@@ -4,17 +4,14 @@
   See http://ionicframework.com/docs/v2/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-header>
 
-  <ion-navbar>
-    <ion-title>样机订单</ion-title>
-  </ion-navbar>
-
-</ion-header>
 
 
 <ion-content no-padding class="order-list">
   <ion-list>
+    <ion-list-header>
+      {{isPrototype?'样机订单':'购货订单'}}
+    </ion-list-header>
     <!--<ion-item-sliding>-->
       <button ion-item *ngFor="let o of orders" (click)="nav2OrderDetail(o.id)">
         <ion-thumbnail item-left>
@@ -41,5 +38,7 @@
       <!--</ion-item-options>-->
     <!--</ion-item-sliding>-->
   </ion-list>
-
+  <button fab fab-bottom fab-fixed fab-left background (click)="back()">
+    <ion-icon name="undo"></ion-icon>
+  </button>
 </ion-content>
