--- a/app/pages/order-status/order-status.html
+++ b/app/pages/order-status/order-status.html
@@ -4,13 +4,6 @@
   See http://ionicframework.com/docs/v2/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-header>
-
-  <ion-navbar>
-    <ion-title>订单状态跟踪</ion-title>
-  </ion-navbar>
-
-</ion-header>
 
 
 <ion-content no-padding class="order-status">
@@ -27,4 +20,7 @@
       </div>
     </li>
   </ul>
+  <button fab fab-bottom fab-fixed fab-left background (click)="navCtrl.pop()">
+    <ion-icon name="undo"></ion-icon>
+  </button>
 </ion-content>
