--- a/app/pages/personal/personal.html
+++ b/app/pages/personal/personal.html
@@ -9,9 +9,9 @@
   <ion-list>
     <button ion-item style="height: 80px;" (click)="nav2Profile()">
       <ion-avatar item-left>
-        <img src="img/avatar/avatar-ts-buzz.png"/>
+        <img src="img/logo.png"/>
       </ion-avatar>
-      <h2>{{session.user.account}}</h2>
+      <h2>公司信息</h2>
     </button>
   </ion-list>
 
@@ -27,15 +27,15 @@
     </button>
   </ion-list>
 
-  <ion-list>
-    <ion-list-header>
+  <!--<ion-list>-->
+    <!--<ion-list-header>-->
 
-    </ion-list-header>
-    <button ion-item (click)="NIY()">
-      <!--<ion-icon [name]="'logo-' + item.icon" [ngStyle]="{'color': item.color}" item-left></ion-icon>-->
-      关于
-      <!--<ion-icon md="ios-arrow-forward" item-right class="color-light"></ion-icon>-->
-    </button>
-  </ion-list>
+    <!--</ion-list-header>-->
+    <!--<button ion-item (click)="NIY()">-->
+      <!--&lt;!&ndash;<ion-icon [name]="'logo-' + item.icon" [ngStyle]="{'color': item.color}" item-left></ion-icon>&ndash;&gt;-->
+      <!--关于-->
+      <!--&lt;!&ndash;<ion-icon md="ios-arrow-forward" item-right class="color-light"></ion-icon>&ndash;&gt;-->
+    <!--</button>-->
+  <!--</ion-list>-->
 
 </ion-content>
