--- a/app/pages/sdk/sdk.html
+++ b/app/pages/sdk/sdk.html
@@ -4,13 +4,13 @@
   See http://ionicframework.com/docs/v2/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-header>
+<!--<ion-header>-->
 
-  <ion-navbar>
-    <ion-title>SDK下载</ion-title>
-  </ion-navbar>
+  <!--<ion-navbar>-->
+    <!--<ion-title>SDK下载</ion-title>-->
+  <!--</ion-navbar>-->
 
-</ion-header>
+<!--</ion-header>-->
 
 
 <ion-content no-padding class="sdk">
@@ -49,4 +49,9 @@
       </a>
   </div>
 
+  <button fab fab-bottom fab-fixed fab-left background (click)="back()">
+    <ion-icon name="undo"></ion-icon>
+  </button>
+
 </ion-content>
+
