--- a/app/pages/select/select.html
+++ b/app/pages/select/select.html
@@ -4,15 +4,6 @@
   See http://ionicframework.com/docs/v2/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-header>
-
-  <ion-navbar>
-    <ion-title>三分钟选型</ion-title>
-  </ion-navbar>
-
-</ion-header>
-
-
 <ion-content no-padding>
   <ion-list>
     <ion-item *ngFor="let t of tags">
@@ -36,5 +27,10 @@
       <ion-col>&nbsp;</ion-col>
     </ion-row>
   </ion-grid>
-  <button fab fab-bottom fab-fixed fab-center (click)="nav2ProductList()">GO</button>
+  <button fab fab-bottom fab-fixed fab-center favorite (click)="nav2ProductList()">
+    <ion-icon name="search"></ion-icon>
+  </button>
+  <button fab fab-bottom fab-fixed fab-left background (click)="back()">
+    <ion-icon name="undo"></ion-icon>
+  </button>
 </ion-content>
