--- a/app/pages/trade-category/trade-category.html
+++ b/app/pages/trade-category/trade-category.html
@@ -4,17 +4,11 @@
   See http://ionicframework.com/docs/v2/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-header>
-
-  <ion-navbar>
-    <ion-title>行业应用</ion-title>
-  </ion-navbar>
-
-</ion-header>
-
-
 <ion-content no-padding class="trade-category">
   <ion-list>
     <button ion-item *ngFor="let category of categories" (click)="nav2TradeSubPage(category)">{{category.name}}</button>
   </ion-list>
+  <button fab fab-bottom fab-fixed fab-left background (click)="back()">
+    <ion-icon name="undo"></ion-icon>
+  </button>
 </ion-content>
